generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}
generator dbml {
  provider = "prisma-dbml-generator"
  output     = "../dbml"
}

datasource db {
  provider = "postgresql"
}


enum CompanyTier {
  free
  premium
}

enum QIStatus {
  Initializing
  Selecting
  Filling
  Canceled
  Done
}

enum UserRole {
  ADMIN
  USER
}

enum QuoteStatus {
  Pending
  Complete
  Canceled
}

model Client {
  id            String    @id @default(uuid())
  companyId     String
  clientPhone   String
  name          String?
  registeredAt  DateTime  @default(now()) @db.Timestamptz

  // Relations
  company Company @relation(fields: [companyId], references: [id], onDelete: Cascade)
  quotes  Quote[]

  @@unique([clientPhone, companyId])
}

model Company {
  id           String      @id @default(uuid())
  phoneNumber  String      @unique
  name         String
  website      String?      
  tier         CompanyTier @default(free)
  createdAt    DateTime    @default(now())  @db.Timestamptz
  updatedAt    DateTime    @db.Timestamptz

  // Relations
  clients        Client[]
  products       Product[]
  quotes         Quote[]
  users          User[]
  companySecret  CompanySecret?
}

model CompanySecret {
  companyId          String @id
  whatsappTokenHash  String
  phoneNumberId      String

  // Relations
  company Company @relation(fields: [companyId], references: [id], onDelete: Cascade)
}

model Product {
  id                 String    @id @default(uuid())
  companyId          String
  name               String
  parameters         Json
  description        String
  notes              String?
  basePrice          Decimal
  dynamicPricingDsl  Json
  deletedAt          DateTime?   @db.Timestamptz

  // Relations
  company Company    @relation(fields: [companyId], references: [id], onDelete: Cascade)
  quoteItems QuoteItem[]
}

model Quote {
  id           String       @id @default(uuid())
  companyId    String
  clientId     String
  status       QuoteStatus  
  totalAmount  Decimal?
  pdfUrl       String?
  createdAt    DateTime     @default(now())  @db.Timestamptz

  // Relations
  company   Company   @relation(fields: [companyId], references: [id], onDelete: Cascade)
  client    Client    @relation(fields: [clientId], references: [id], onDelete: Cascade)
  items     QuoteItem[]
}

model QuoteItem {
  id              String    @id
  quoteId         String
  productId       String?
  parameters      Json
  status          QIStatus
  calculatedPrice Decimal?
  isParamsCompleted  Boolean 
  createdAt       DateTime  @default(now())   @db.Timestamptz

  // Relations
  quote   Quote   @relation(fields: [quoteId], references: [id], onDelete: Cascade)
  product Product? @relation(fields: [productId], references: [id], onDelete: Cascade)
}

model User {
  id           String    @id @default(uuid())
  companyId    String
  email        String    @unique
  passwordHash String
  role         UserRole  @default(ADMIN)
  createdAt    DateTime  @default(now())   @db.Timestamptz

  // Relations
  company Company @relation(fields: [companyId], references: [id], onDelete: Cascade)
}