//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Client {
  id String [pk]
  companyId String [not null]
  clientPhone String [not null]
  name String
  registeredAt DateTime [default: `now()`, not null]
  company Company [not null]
  quotes Quote [not null]

  indexes {
    (clientPhone, companyId) [unique]
  }
}

Table Company {
  id String [pk]
  phoneNumber String [unique, not null]
  name String [not null]
  website String
  tier CompanyTier [not null, default: 'free']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  clients Client [not null]
  products Product [not null]
  quotes Quote [not null]
  users User [not null]
  companySecret CompanySecret
}

Table CompanySecret {
  companyId String [pk]
  whatsappTokenHash String [not null]
  phoneNumberId String [not null]
  company Company [not null]
}

Table Product {
  id String [pk]
  companyId String [not null]
  name String [not null]
  parameters Json [not null]
  description String [not null]
  notes String
  basePrice Decimal [not null]
  dynamicPricingDsl Json [not null]
  deletedAt DateTime
  company Company [not null]
  quoteItems QuoteItem [not null]
}

Table Quote {
  id String [pk]
  companyId String [not null]
  clientId String [not null]
  status QuoteStatus [not null]
  totalAmount Decimal
  pdfUrl String
  createdAt DateTime [default: `now()`, not null]
  company Company [not null]
  client Client [not null]
  items QuoteItem [not null]
}

Table QuoteItem {
  id String [pk]
  quoteId String [not null]
  productId String
  parameters Json [not null]
  status QIStatus [not null]
  calculatedPrice Decimal
  isParamsCompleted Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  quote Quote [not null]
  product Product
}

Table User {
  id String [pk]
  companyId String [not null]
  email String [unique, not null]
  passwordHash String [not null]
  role UserRole [not null, default: 'ADMIN']
  createdAt DateTime [default: `now()`, not null]
  company Company [not null]
}

Enum CompanyTier {
  free
  premium
}

Enum QIStatus {
  Initializing
  Selecting
  Filling
  Canceled
  Done
}

Enum UserRole {
  ADMIN
  USER
}

Enum QuoteStatus {
  Pending
  Complete
  Canceled
}

Ref: Client.companyId > Company.id [delete: Cascade]

Ref: CompanySecret.companyId - Company.id [delete: Cascade]

Ref: Product.companyId > Company.id [delete: Cascade]

Ref: Quote.companyId > Company.id [delete: Cascade]

Ref: Quote.clientId > Client.id [delete: Cascade]

Ref: QuoteItem.quoteId > Quote.id [delete: Cascade]

Ref: QuoteItem.productId > Product.id [delete: Cascade]

Ref: User.companyId > Company.id [delete: Cascade]